--- a/lib-docs/jade/docs/3.x/ui/index.jade
+++ b/lib-docs/jade/docs/3.x/ui/index.jade
@@ -50,7 +50,7 @@ block documents
         :markdown
           <span>
 
-              <div class="container fixed">
+              <div class="container container-fixed">
                 <h1>Hello world</h1>
               </div>
 
@@ -119,7 +119,7 @@ block documents
         Several styles are applied at the HTML level for convenience throughout
         the DOM.
 
-        A default font-size of 18px (varies depending on the theme) is set. This
+        A default font-size of 16-18px (varies depending on the theme) is set. This
         should really be the only place where `px` are used to define font-size.
         Elsewhere, the `rem` unit is used, which is relative to the font-size in
         the HTML document.
@@ -235,10 +235,10 @@ block documents
 
             <button class="button foo button-yellow foo-blue">...</button>
 
-  .document
+  .document.if-semantic
     article.article
       .if-semantic
-        h3 Using decoupled modifiers
+        h3.only-semantic Using decoupled modifiers
         :markdown
           One of the problems you may run into when using the mixins across
           multiple classes, is getting individual properties to stay separate.
@@ -272,7 +272,7 @@ block documents
 
             <button class="button button-blue button-large">Send</button>
 
-  .document
+  .document.if-semantic
     article.article
       :markdown
         For this reason, most mixins include decoupled sub-mixins to target
@@ -299,117 +299,118 @@ block documents
         same mixins called from `button()`. They are simply written outside of
         the mixin for this exact purpose.
 
-  .document
-    article.article
-      :markdown
-        # Colors
-        ## Rainbow colors
+  .if-semantic
+    .document
+      article.article
+        h1.only-semantic Colors
+        :markdown
+          <h2 class="only-semantic">Rainbow colors</h2>
 
-        To use a color variable, refer to the `$color` Sass map and retrieve one of red, orange, yellow, green, blue, or violet.
+          To use a color variable, refer to the `$color` Sass map and retrieve one of red, orange, yellow, green, blue, or violet.
 
-        [Read more about Sass maps](http://sass-lang.com/documentation/file.SASS_REFERENCE.html#maps)
+          [Read more about Sass maps](http://sass-lang.com/documentation/file.SASS_REFERENCE.html#maps)
 
-    article.code
-      :markdown
-        <span>
+      article.code
+        :markdown
+          <span>
 
-            .button
-              color: map-get($colors, red)
+              .button
+                color: map-get($colors, red)
 
-  .document
-    article.article
-      :markdown
-        ## Grayscale
+    .document
+      article.article
+        :markdown
+          <h2 class="only-semantic">Grayscale</h2>
 
-        Grayscale variables live in three separate maps, `$white`, `$gray`, and `$black`.
-        Shades of each are called using `-`, `-er`, and `-est` patterns as such:
+          Grayscale variables live in three separate maps, `$white`, `$gray`, and `$black`.
+          Shades of each are called using `-`, `-er`, and `-est` patterns as such:
 
-    article.code
-      :markdown
-        <span>
+      article.code
+        :markdown
+          <span>
 
-            map-get($white, darker)
+              map-get($white, darker)
 
-  .document
-    article.article
-      :markdown
-        For the $gray map, you can retrieve the light, lighter, and lightest light subsets or the
-        dark, darker, and darkest dark subsets.
+    .document
+      article.article
+        :markdown
+          For the $gray map, you can retrieve the light, lighter, and lightest light subsets or the
+          dark, darker, and darkest dark subsets.
 
-    article.code
-      :markdown
-        <span>
+      article.code
+        :markdown
+          <span>
 
-            map-get($gray, lightest)
-            map-get($gray, lighter)
-            map-get($gray, light)
-            map-get($gray, dark)
-            map-get($gray, darker)
-            map-get($gray, darkest)
+              map-get($gray, lightest)
+              map-get($gray, lighter)
+              map-get($gray, light)
+              map-get($gray, dark)
+              map-get($gray, darker)
+              map-get($gray, darkest)
 
-  .document
-    article.article
-      :markdown
-        The same is true for `$white` and `$black`. Intuitively, "light" versions of `$white` do
-        not exist, nor do "dark" versions of `$black`
+    .document
+      article.article
+        :markdown
+          The same is true for `$white` and `$black`. Intuitively, "light" versions of `$white` do
+          not exist, nor do "dark" versions of `$black`
 
-    article.code
-      :markdown
-        <span>
+      article.code
+        :markdown
+          <span>
 
-            map-get($white, dark)
-            map-get($white, darker)
-            map-get($white, darkest)
+              map-get($white, dark)
+              map-get($white, darker)
+              map-get($white, darkest)
 
-            map-get($gray, lightest)
-            map-get($gray, lighter)
-            map-get($gray, light)
-            map-get($gray, dark)
-            map-get($gray, darker)
-            map-get($gray, darkest)
+              map-get($gray, lightest)
+              map-get($gray, lighter)
+              map-get($gray, light)
+              map-get($gray, dark)
+              map-get($gray, darker)
+              map-get($gray, darkest)
 
-            map-get($black, lightest)
-            map-get($black, lighter)
-            map-get($black, light)
+              map-get($black, lightest)
+              map-get($black, lighter)
+              map-get($black, light)
 
-  .document
-    article.article
-      :markdown
-        For regular white, gray, and black, simply use the css name.
+    .document
+      article.article
+        :markdown
+          For regular white, gray, and black, simply use the css name.
 
-        This example represents a grayscale set all the way from white to black.
+          This example represents a grayscale set all the way from white to black.
 
-    article.code
-      :markdown
-        <span>
+      article.code
+        :markdown
+          <span>
 
-            white
+              white
 
-            map-get($white, dark)
-            map-get($white, darker)
-            map-get($white, darkest)
+              map-get($white, dark)
+              map-get($white, darker)
+              map-get($white, darkest)
 
-            map-get($gray, lightest)
-            map-get($gray, lighter)
-            map-get($gray, light)
+              map-get($gray, lightest)
+              map-get($gray, lighter)
+              map-get($gray, light)
 
-            gray
+              gray
 
-            map-get($gray, dark)
-            map-get($gray, darker)
-            map-get($gray, darkest)
+              map-get($gray, dark)
+              map-get($gray, darker)
+              map-get($gray, darkest)
 
-            map-get($black, lightest)
-            map-get($black, lighter)
-            map-get($black, light)
+              map-get($black, lightest)
+              map-get($black, lighter)
+              map-get($black, light)
 
-            black 
+              black 
 
-  .document
-    article.article.article-full
-      :markdown
-        ## Semantic colors
+    .document
+      article.article.article-full
+        :markdown
+          <h2 class="only-semantic">Semantic colors</h2>
 
-        Two semantic colors, `$primary-color` and `$secondary-color` are assigned to the colors/grayscale 
-        values above via the chosen theme. These are used throughout Kickstart to denote hierarchy in the
-        interface.
+          Two semantic colors, `$primary-color` and `$secondary-color` are assigned to the colors/grayscale 
+          values above via the chosen theme. These are used throughout Kickstart to denote hierarchy in the
+          interface.
