--- a/lib-core/sass/core/components/_dropdown_menu.sass
+++ b/lib-core/sass/core/components/_dropdown_menu.sass
@@ -16,7 +16,7 @@
         right: 1px solid map-get($white, darker)
         bottom: 1px solid map-get($white, darker)
       border-radius: map-get($rootElement, border-radius)
-      box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.25)
+      box-shadow: 2px 2px 0px 2px rgba(0, 0, 0, 0.1)
       background: white
 
       &:before
