adding the same thing for right menus

--- a/lib-core/sass/core/components/_navbar.sass
+++ b/lib-core/sass/core/components/_navbar.sass
@@ -128,6 +128,7 @@
             ul
               left: auto
               right: -1px
+              box-shadow: -2px 2px 0px 2px rgba(0, 0, 0, 0.1)
 
       &:only-child
         @media screen and (min-width: $breakpoint)
