Adding CDN links

--- a/lib-core/sass/core/_typography.sass
+++ b/lib-core/sass/core/_typography.sass
@@ -34,7 +34,9 @@ a
   border-radius: $space/5
   padding: ($space/5)
   font-family: $mono-font-family
-  word-break: break-all
+  word-break: normal
+  hyphens: none
+  tab-size: 2
   word-wrap: break-word
   border: 0px !important
   margin: 0
