Cleaning up top part

--- a/lib-docs/jade/docs/3.x/grid/index.jade
+++ b/lib-docs/jade/docs/3.x/grid/index.jade
@@ -20,19 +20,19 @@ block documents
         1. A row
         1. Columns
 
+        Resize your browser window to observe the column behavior
+
       .example
         .row
           .col-third
             .col-example
-              p I'm 4 columns on desktop monitors...
-              p 6 columns on tablets...
-              p and 12 (full) columns on mobile.
+              h5 News
+              p Breaking news
 
           .col-twothirds
             .col-example
-              p I'm eight columns on desktop monitors...
-              p 6 columns on tablets
-              p and 12 (full) columns on mobile.
+              h1 Top Story
+              p Here are today's top stories
 
     article.code
       .ifnot-semantic
