Updating images to use figure element for images as well.

--- a/lib-core/sass/core/components/_images.sass
+++ b/lib-core/sass/core/components/_images.sass
@@ -4,7 +4,7 @@
   margin-bottom: $space
   align-items: flex-start
 
-  img
+  img, figure
     margin-bottom: $space
 
   h1
@@ -17,14 +17,14 @@
       flex-grow: 0
       flex-shrink: 0
 
-    > :not(img)
+    > :not(img):not(figure)
       width: 100%
 
       + img, + figure
         margin-left: $space/2
 
     > img, > figure
-      + :not(img)
+      + :not(img):not(figure)
         margin-left: $space/2
         width: 100%
 
