--- a/lib-core/sass/themes/default/_theme.sass
+++ b/lib-core/sass/themes/default/_theme.sass
@@ -179,8 +179,8 @@ hr
 // Images
 // ------
 
-=thumbnail-content
-  +thumbnail-content-default
+=thumbnail-content($args...)
+  +thumbnail-content-default($args...)
 
 =thumbnail
   +thumbnail-default
