--- a/lib-docs/sass/pages/docs/index.sass
+++ b/lib-docs/sass/pages/docs/index.sass
@@ -137,7 +137,7 @@ h3, h4, h5, h6
     margin-top: -25px
     padding-top: 25px
 
-  .alert, .thumbnail-content article
+  .alert, .thumbnail-content article, .modal, .modal-example
     h1:first-child
       margin-top: 0
       padding-top: 0
