Fixing headings on throttle page

--- a/lib-docs/jade/docs/3.x/functions/throttling/index.jade
+++ b/lib-docs/jade/docs/3.x/functions/throttling/index.jade
@@ -11,7 +11,7 @@ block documents
   .document
     article.article
       :markdown
-        ## Buffer
+        # Buffer
 
         The buffer accepts a function. Each function it is given is run, but
         at a specific rate.
@@ -50,7 +50,7 @@ block documents
   .document
     article.article
       :markdown
-        ## Debouncing
+        # Debouncing
 
         You can also debounce a component with `k$.debounce()` 
 
