Adding back browser support details

--- a/lib-docs/jade/index.jade
+++ b/lib-docs/jade/index.jade
@@ -102,13 +102,13 @@ block content
       h1 Follow Everything for Updates
       <a class="twitter-timeline" href="https://twitter.com/everythingdotio" data-widget-id="527147171141783552">Tweets de @everythingdotio</a> <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
-    footer.specs(style="display: none")
+    footer.specs
       h1 Specifications
       
       .spec
         dl
           dt Browser Support
-          dd IE 11+, Chrome, Firefox 30+, Safari 7+
+          dd IE 10+, IE9 with shim, Chrome 35, Firefox 30+, Safari 8+
 
       .spec
         dl
