--- a/lib-docs/jade/index.jade
+++ b/lib-docs/jade/index.jade
@@ -102,6 +102,7 @@ block content
       h1 Follow Everything for Updates
       <a class="twitter-timeline" href="https://twitter.com/everythingdotio" data-widget-id="527147171141783552">Tweets de @everythingdotio</a> <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
+  article.home-wrapper
     footer.specs
       h1 Specifications
       
@@ -109,11 +110,6 @@ block content
         dl
           dt Browser Support
           dd IE 10+, IE9 with shim, Chrome 35, Firefox 30+, Safari 8+
-
-      .spec
-        dl
-          dt Filesize
-          dd n/a
 
       .spec
         dl
