--- a/lib-docs/jade/docs/2.x/index.jade
+++ b/lib-docs/jade/docs/2.x/index.jade
@@ -1,6 +1,6 @@
-extends ../../layout
+extends ../../_layout
 
-block mainpane
+block content
   header.page-heading
     :markdown
       ## Documentation
