--- a/lib-docs/jade/docs/3.x/_layout.jade
+++ b/lib-docs/jade/docs/3.x/_layout.jade
@@ -2,9 +2,9 @@ extends ../../_layout
 
 block page-stylesheet
   block ui-stylesheet
-  link(rel="stylesheet" href="/css/pages/docs/index.css")
   script(src="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.2/highlight.min.js")
-  link(rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.2/styles/tomorrow-night.min.css")
+  link(rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.2/styles/solarized_dark.min.css")
+  link(rel="stylesheet" href="/css/pages/docs/index.css")
   script.
     hljs.initHighlightingOnLoad(); 
 
