--- a/lib-docs/jade/_layout.jade
+++ b/lib-docs/jade/_layout.jade
@@ -1,9 +1,11 @@
 doctype html
 
 - var showFooter = true
-- var title = "The framework we've been waiting for"
+- var title = "The framework we've been waiting for" 
 
 block variables
+block menuVars
+  - var menuItem = "home"
 
 include _mixins
 
