--- a/lib-docs/jade/docs/3.x/_layout.jade
+++ b/lib-docs/jade/docs/3.x/_layout.jade
@@ -1,5 +1,8 @@
 extends ../../_layout
 
+block menuVars
+  - var menuItem = "docs" 
+
 block page-stylesheet
   block ui-stylesheet
   script(src="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.2/highlight.min.js")
