--- a/lib-docs/jade/_header.jade
+++ b/lib-docs/jade/_header.jade
@@ -8,7 +8,7 @@
           <svg class="svg-logo-small"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-logo"></use></svg>
         button(role="button") =
       li: a(href="/") Home
-      li: a(href="/docs/#{docsVersion}/") Docs
+      li: a(href="/docs/#{docsVersion}/" class="#{menuItem == 'docs' ? 'active' : ''}") Docs
       li: a(href="/about/") About
 
     ul
