--- a/lib-docs/sass/pages/docs/index.sass
+++ b/lib-docs/sass/pages/docs/index.sass
@@ -17,7 +17,7 @@ h3, h4, h5, h6
   +alert
 
 .docs-nav
-  +navbar($collapse: true, $layout: 'fluid')
+  +navbar($collapse: true, $layout: 'fluid', $background-color: map-get($colors, blue))
   margin-top: -$space
 
 .fixed-area
