Adding more navbar active styling

--- a/lib-core/sass/core/components/_navbar.sass
+++ b/lib-core/sass/core/components/_navbar.sass
@@ -208,7 +208,7 @@
               content: '+'
               margin-left: 8px
 
-          &:hover
+          &:hover, &.active
             @if (lightness($background-color) < 75%)
               color: white
             @else
