--- a/lib-docs/jade/_header.jade
+++ b/lib-docs/jade/_header.jade
@@ -9,7 +9,7 @@
         button(role="button") =
       li: a(href="/") Home
       li: a(href="/docs/#{docsVersion}/" class="#{menuItem == 'docs' ? 'active' : ''}") Docs
-      li: a(href="/about/") About
+      li: a(href="/about" class="#{menuItem == 'about' ? 'active' : ''}") About
 
     ul
       li
