Adding navbar states to docs

--- a/lib-docs/jade/_layout.jade
+++ b/lib-docs/jade/_layout.jade
@@ -7,6 +7,9 @@ block variables
 block menuVars
   - var menuItem = "home"
 
+block subMenuVars
+  - var subMenuItem = "components"
+
 include _mixins
 
 html(lang='en')
