--- a/lib-docs/jade/docs/3.x/adding-extensions/index.jade
+++ b/lib-docs/jade/docs/3.x/adding-extensions/index.jade
@@ -7,6 +7,9 @@ block variables
   - var showFooter = false
   - var title = "Adding Extensions"
 
+block subMenuVars
+  - var subMenuItem = "getstarted"
+
 block documents
   .document
     article.article.article-full
