--- a/lib-docs/jade/docs/3.x/functions/extend/index.jade
+++ b/lib-docs/jade/docs/3.x/functions/extend/index.jade
@@ -6,6 +6,9 @@ block hero-title
 block docVars
   - var variations = false
 
+block subMenuVars
+  - var subMenuItem = "functions"
+
 block variables
   - var showFooter = false
   - var title = "Extend Function"
