--- a/lib-docs/jade/docs/3.x/functions/throttling/index.jade
+++ b/lib-docs/jade/docs/3.x/functions/throttling/index.jade
@@ -7,6 +7,9 @@ block variables
   - var showFooter = false
   - var title = "Throttling"
 
+block subMenuVars
+  - var subMenuItem = "functions"
+
 block documents
   .document
     article.article
