--- a/lib-docs/jade/docs/3.x/grid/index.jade
+++ b/lib-docs/jade/docs/3.x/grid/index.jade
@@ -7,6 +7,9 @@ block variables
   - var showFooter = false
   - var title = "Grid"
 
+block subMenuVars
+  - var subMenuItem = "getstarted"
+
 block ui-stylesheet
   link(rel="stylesheet" href="/css/pages/docs/grid.css") 
 
