--- a/lib-core/sass/core/components/_navbar.sass
+++ b/lib-core/sass/core/components/_navbar.sass
@@ -213,6 +213,8 @@
               color: white
             @else
               color: rgba(0, 0, 0, 0.85)
+
+          &:hover
             background: darken($background-color, 5%)
             border-color: darken($background-color, 5%)
 
