--- a/lib-docs/jade/docs/3.x/index.jade
+++ b/lib-docs/jade/docs/3.x/index.jade
@@ -7,6 +7,9 @@ block variables
   - var showFooter = false 
   - var title = 'Quickstart'
 
+block subMenuVars
+  - var subMenuItem = "getstarted"
+
 block documents 
   .document
     article.article
