--- a/lib-docs/jade/docs/3.x/index.jade
+++ b/lib-docs/jade/docs/3.x/index.jade
@@ -14,6 +14,7 @@ block documents
   .document
     article.article
       h1 Barebones
+      h2 JS/CSS
 
       :markdown
         Just use the CSS/JS file via a CDN.
@@ -61,6 +62,28 @@ block documents
             <script>
               k$.tabs('.tabs');
             </script>
+
+  .document
+    article.article
+      h2 Coffeescript/Sass
+
+      p Using the source Sass and Coffeescript files in a project is easy. Simply clone the repo
+
+    article.code
+      :markdown
+        <span>
+
+            $(~) git clone git@github.com:ajkochanowicz/kickstart.git --depth 1
+
+  .document
+    article.article.article-full
+      :markdown
+        In Kickstart, the main Sass file to compile is just the theme you are using. This can be found
+        in `lib-core/sass/themes`
+
+        If you wish to use your own theme, you can place this wherever you like in your project. You'll
+        just need to make sure your Sass `loadPaths` include the repo you just cloned. Otherwise, you'll
+        get an error that some of the core libraries can't be found.
 
   .document
     article.article
