--- a/lib-core/sass/core/components/_navbar.sass
+++ b/lib-core/sass/core/components/_navbar.sass
@@ -201,8 +201,21 @@
 
           @media screen and (min-width: $breakpoint)
             &:before
-              content: ''
+              content: ' '
               display: none
+
+            &.open
+              &:before
+                content: ' '
+                display: block
+                position: absolute
+                bottom: -2px
+                left: 0
+                right: 0
+                height: 2px
+                background: white
+                margin: 0
+                z-index: 15 
 
             &:after
               content: '+'
@@ -249,8 +262,11 @@
         ul
           border-top-left-radius: 0
           border-top-right-radius: 0
-          box-shadow: 2px 2px 0px 2px rgba(0, 0, 0, 0.1)
+          // box-shadow: 2px 2px 0px 2px rgba(0, 0, 0, 0.1)
           display: none
+
+          @media screen and (min-width: $breakpoint)
+            border-top: 1px solid map-get($white, darker)
 
         ul[role=button]
           display: inherit
