--- a/lib-core/sass/core/components/_navbar.sass
+++ b/lib-core/sass/core/components/_navbar.sass
@@ -128,7 +128,7 @@
             ul
               left: auto
               right: -1px
-              box-shadow: -2px 2px 0px 2px rgba(0, 0, 0, 0.1)
+              // box-shadow: -2px 2px 0px 2px rgba(0, 0, 0, 0.1)
 
       &:only-child
         @media screen and (min-width: $breakpoint)
@@ -189,6 +189,16 @@
           padding: (2 * map-get($rootElement, paddingV) - 1) (map-get($rootElement, paddingH))
           cursor: pointer
 
+          ul
+            box-shadow: 0px 2px 2px 2px rgba(0, 0, 0, 0.1)
+          //
+          //   li
+          //     border-color: white
+          //
+          //     a:not([role=button])
+          //       background: inherit
+          //       border-color: inherit
+
           &:before
             content: '='
             margin-right: 8px
@@ -213,7 +223,7 @@
                 left: 0
                 right: 0
                 height: 2px
-                background: white
+                background: inherit
                 margin: 0
                 z-index: 15 
 
