About to make some major changes to navbar items

--- a/lib-docs/jade/tests/static.jade
+++ b/lib-docs/jade/tests/static.jade
@@ -30,5 +30,18 @@ html
         .col-3: .column-example Test
         .col-3: .column-example Test
 
+    .container
+      h2 Navigation
+
+      .navbar
+        nav
+          ul
+            li Home
+
+      .navbar
+        nav
+          ul
+            li: a(href="#") Home
+
 
 
