--- a/lib-core/sass/core/components/_navbar.sass
+++ b/lib-core/sass/core/components/_navbar.sass
@@ -142,9 +142,9 @@
         border-radius: 0
         padding: (2 * map-get($rootElement, paddingV)) (map-get($rootElement, paddingH))
         position: relative
-        // margin:
-        //   left: (-1 * map-get($rootElement, paddingH))
-        //   right: (-1 * map-get($rootElement, paddingH))
+        margin:
+          left: (-1 * map-get($rootElement, paddingH))
+          right: (-1 * map-get($rootElement, paddingH))
         user-select: none
 
         @media screen and (min-width: $breakpoint)
