Adding disabled styles

--- a/lib-core/sass/core/components/_navbar.sass
+++ b/lib-core/sass/core/components/_navbar.sass
@@ -143,6 +143,9 @@
         padding: (2 * map-get($rootElement, paddingV)) (map-get($rootElement, paddingH))
         position: relative
         user-select: none
+        border:
+          left: 0px
+          right: 0px
 
         @if ($collapse == true)
           margin:
