--- a/lib-core/sass/core/components/_buttons.sass
+++ b/lib-core/sass/core/components/_buttons.sass
@@ -11,7 +11,7 @@
   &[disabled], &:disabled
     color: rgba(0, 0, 0, 0.25)
     pointer-events: none
-    // TODO: Cursor disabled?
+    cursor: not-allowed
 
   &.menu-item
     position: relative
@@ -164,6 +164,7 @@
 
   > li > ul
     +button-dropdown-menu
+    right: auto
     display: none
 
   @content
