--- a/lib-docs/jade/index.jade
+++ b/lib-docs/jade/index.jade
@@ -109,7 +109,7 @@ block content
       .spec
         dl
           dt Browser Support
-          dd IE 10+, IE9 with shim, Chrome 35, Firefox 30+, Safari 8+
+          dd Officially, Kickstart is a framework for <a href="http://eisenbergeffect.bluespire.com/evergreen-browsers/">Evergreen Browsers</a>. But I make an effort to support IE 10+, IE9 with shim, Chrome 35, Firefox 30+, Safari 8+
 
       .spec
         dl
