--- a/lib-docs/sass/pages/docs/index.sass
+++ b/lib-docs/sass/pages/docs/index.sass
@@ -20,6 +20,13 @@ h3, h4, h5, h6
   +navbar($collapse: true, $layout: 'fluid', $background-color: map-get($colors, blue))
   margin-top: -$space
 
+  &.fixed
+    position: fixed
+    top: 0
+    margin-top: 0
+    left: 0
+    right: 0
+
 .fixed-area
   margin-top: -$space
 
