Fix to button dropdown in navbar

--- a/lib-core/sass/core/components/_buttons.sass
+++ b/lib-core/sass/core/components/_buttons.sass
@@ -145,6 +145,8 @@
         @else
           border-right: 1px solid rgba(0, 0, 0, 0.1)
 
+    .menu-item.open > ul
+      display: block
 
     &:last-child:not(:only-child)
       > a, > button, > input
