Fixing another bug related

--- a/lib-core/sass/core/components/_navbar.sass
+++ b/lib-core/sass/core/components/_navbar.sass
@@ -275,7 +275,7 @@
         ul
           border-top-left-radius: 0
           border-top-right-radius: 0
-          display: none
+          // display: none
 
           @media screen and (min-width: $breakpoint)
             border-top: 1px solid map-get($white, darker)
