--- a/lib-docs/jade/tests/static.jade
+++ b/lib-docs/jade/tests/static.jade
@@ -89,6 +89,38 @@ html
                   li: a(href="#") Bar
                   li: a(href="#") Bar
 
+      .navbar.with-dropdown
+        nav
+          ul
+            li Home
+            li: a(href="#") Home
+            li: a.button.button-primary(role="button" href="#") Home
+            li
+              | Menu
+              ul
+                li: a(href="#") Option
+                li: a(href="#") Option
+                li: a(href="#") Option
+                li: a(href="#") Option
+            li
+              ul.button-group.button-primary(role="button")
+                li: a(href="#") Foo
+                li: a(href="#") Bar
+            li
+              ul.button-group.button-primary(role="button")
+                li: a(href="#") Foo
+                li
+                  button.button-dropdown
+                  ul
+                    li: a(href="#") Bar
+                    li: a(href="#") Bar
+            li
+              button.button.button-primary(role="button")
+                | Foo
+                ul
+                  li: a(href="#") Bar
+                  li: a(href="#") Bar
+
       .navbar
         nav
           ul
@@ -110,3 +142,6 @@ html
                 ul
                   li: a(href="#") Bar
                   li: a(href="#") Bar
+
+    script.
+      k$.nav('.with-dropdown')
