Improving code styling

--- a/lib-docs/sass/pages/docs/index.sass
+++ b/lib-docs/sass/pages/docs/index.sass
@@ -190,7 +190,7 @@ h3, h4, h5, h6
       border-bottom: 1px solid map-get($white, darker)
 
     .code
-      border-color: darken(map-get($colors, blue), 35%)
+      border-color: darken(map-get($colors, blue), 45%)
 
     .article.article-full
       width: 100%
@@ -206,9 +206,8 @@ h3, h4, h5, h6
         right: 0
         left: 50%
         bottom: -1px
-        // background: lighten(#1d1f21, 10%)
-        background: black
-        border-bottom: 1px solid map-get($black, light)
+        background: darken(map-get($colors, blue), 40%)
+        border-bottom: 1px solid darken(map-get($colors, blue), 45%)
 
 .page_heading
   +page_heading
