--- a/lib-docs/sass/themes/default/theme.sass
+++ b/lib-docs/sass/themes/default/theme.sass
@@ -259,7 +259,7 @@ hr
 
 // Switch
 =switch
-  +switch-default
+  +switch-default(map-get($colors, blue))
 
 @import core/_direct-apply.sass
 @import vendor/_index
