--- a/lib-core/sass/core/_grid.sass
+++ b/lib-core/sass/core/_grid.sass
@@ -53,7 +53,7 @@ $showFullColumns:    $desktop          // Actual user-defined column measurement
       max-width: $large-monitor
 
 =row
-  display: flex
+  display: inline-flex
   width: 100%
   justify-content: flex-start
   align-items: stretch
