--- a/lib-docs/jade/tests/static.jade
+++ b/lib-docs/jade/tests/static.jade
@@ -143,5 +143,14 @@ html
                   li: a(href="#") Bar
                   li: a(href="#") Bar
 
+      .form.form-horizontal
+        .form_group.form_group-horiztonal
+          label Label
+          button.button Button
+        .form_group.form_group-horizontal
+          label.checkbox
+            input(type="checkbox")
+            | Sign up for newsletter
+
     script.
       k$.nav('.with-dropdown')
