--- a/lib-core/sass/core/_normalize.sass
+++ b/lib-core/sass/core/_normalize.sass
@@ -204,7 +204,7 @@ input
 /**
  * Re-set default cursor for disabled elements.
 
-button[disabled], html input[disabled]
+button[disabled]
   cursor: default
 
 /**
