--- a/lib-docs/jade/docs/3.x/ui/forms/index.jade
+++ b/lib-docs/jade/docs/3.x/ui/forms/index.jade
@@ -78,7 +78,7 @@ block documents
 
         .ifnot-semantic
           :markdown
-            Wrap sets of form elements in a `.form-group` to keep
+            Wrap sets of form elements in a `.form_group` to keep
             proper spacing.
 
         .if-semantic
@@ -92,19 +92,19 @@ block documents
           <span>
 
               <form class="form">
-                <div class="form-group">
+                <div class="form_group">
                   <label for="fname">First name</label>
                   <input id="fname" type="text" />
                 </div>
-                <div class="form-group">
+                <div class="form_group">
                   <label for="lname">Last name</label>
                   <input id="lname" type="text" />
                 </div>
-                <div class="form-group">
+                <div class="form_group">
                   <label for="file">Avatar</label>
                   <input id="file" type="file" />
                 </div>
-                <div class="form-group">
+                <div class="form_group">
                   <label>Issue Size</label>
 
                   <label>
@@ -224,7 +224,7 @@ block documents
           <span>
 
               <form class="form form-horizontal">
-                <div class="form-group">
+                <div class="form_group">
                   <label for="fname">First name</label>
                   <input name="fname" type="text" />
                   <input type="submit" />
@@ -295,7 +295,7 @@ block documents
 
               <form class="form form-left">
                 <div class="form_group row">
-                  <label for="fname" class="col-third>First name</label>
+                  <label for="fname" class="col-third">First name</label>
                   <div name="col-twothirds" class="input">
                     <input type="text" placeholder="john" />
                   </div>
@@ -319,7 +319,7 @@ block documents
                   </label
                 </div>
                 <div class="form_group row">
-                  <label for="industry" class="col-third>Industry</label>
+                  <label for="industry" class="col-third">Industry</label>
                   <div name="industry" class="input" class="col-twothirds">
                     <select>
                       <option>Academic</option>
