--- a/lib-docs/sass/pages/docs/ui/forms.sass
+++ b/lib-docs/sass/pages/docs/ui/forms.sass
@@ -28,7 +28,7 @@ form.form
   +column('twothirds')
 
 .col-twothirds.col-left-third
-  +column('twothirds', 0, 'third')
+  +column('twothirds', 'third')
 
 .switches
   .form_group
