--- a/lib-core/sass/core/components/_buttons.sass
+++ b/lib-core/sass/core/components/_buttons.sass
@@ -67,7 +67,7 @@
   padding: ($size * $size * map-get($rootElement, paddingV)) ($size * $size * map-get($rootElement, paddingH))
   line-height: $size * $default-line-height
   margin-bottom: 0
-  font-size: ($default-font-size - 2) * $size
+  font-size: ($default-font-size) * $size
   padding:
     left: $size * $size * map-get($rootElement, paddingH)
     right: $size * $size * map-get($rootElement, paddingH)
