Fixing unstyled flash of uls on navbar (maybe)

--- a/lib-core/sass/core/components/_navbar.sass
+++ b/lib-core/sass/core/components/_navbar.sass
@@ -188,6 +188,9 @@
             @media screen and (min-width: $breakpoint)
               display: none
 
+        ul
+          display: none
+
         &.menu-item // Added via k$.nav()
           padding: (2 * map-get($rootElement, paddingV) - 1) (map-get($rootElement, paddingH))
           cursor: pointer
