--- a/lib-docs/jade/docs/3.x/ui/buttons/index.jade
+++ b/lib-docs/jade/docs/3.x/ui/buttons/index.jade
@@ -452,7 +452,7 @@ block documents
             </button>
 
   .document
-    article.article.article-full
+    article.article
       h1 Mixing
       p Mix colors, sizes, and button types.
 
@@ -533,6 +533,12 @@ block documents
                       a(href="#") Option 1
                     li
                       a(href="#") Option 2
+
+    article.code
+      :markdown
+        <span>
+
+            // See above examples for markup
 
   .if-semantic
     .document
